--- a/head.html
+++ b/head.html
@@ -8,7 +8,7 @@
     <table style="width: 100%; border-collapse: collapse;">
         <tr>
             <td width="20%" style="padding: 10px; border: 1px solid #000; vertical-align: top;">
-                <img src="https://th.bing.com/th/id/OIP.FoUBZ4Ilkf1M5xYs-B5c0AHaHa?rs=1&pid=ImgDetMain" alt="Online Book Service" width="300">
+                <img src="OIP.JPG" alt="Online Book Service" width="300">
             </td>
             <td width="80%" style="padding: 10px; border: 1px solid #000; vertical-align: center;">
                 <h1>Online BookStore</h1>
