--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table style="width: 100%; border-collapse: collapse;">
         <tr>
             <td width="20%" style="padding: 10px; border: 1px solid #000; vertical-align: top;">
-                <img src="OIP.JPG" alt="Online Book Service" width="300">
+                <img src="BK.JPG" alt="Online Book Service" width="300">
             </td>
             <td width="80%" style="padding: 10px; border: 1px solid #000; vertical-align: center;">
                 <h1>Online BookStore</h1>
